Added loader anmation

--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -42,3 +42,4 @@
     <button [disabled]="!form.valid" class="btn btn-primary">Submit</button>
   </form>
 </div>
+<app-loader *ngIf="loading"></app-loader>
