--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,1 +1,44 @@
 <h1>Posts</h1>
+<div class="row">
+    <div class="col-md-6">        
+        <select class="form-control" #u (change)="reloadPosts({userId: u.value})" >
+            <option value="">Select a user...</option>
+            <option [value]="user.id" *ngFor="let user of users">{{user.name}}</option>
+        </select>
+        <pagination 
+            [items]="posts" 
+            [page-size]="postsPerPage"
+            (page-changed)="pageChanged($event)" ></pagination>
+
+        <spinner [visible]="postsLoading"></spinner>
+
+        <ul *ngIf="paginatedPosts" class="list-group">
+            <li 
+                (click) = "selectPost(post)"
+                [class.selected] = "post == selectedPost"
+                *ngFor = "let post of paginatedPosts" 
+                class = "list-group-item post">{{post.title}}</li>
+        </ul>
+    </div>
+    <div *ngIf="selectedPost" class="col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{selectedPost.title}}</h3>
+            </div>
+            <div class="panel-body">
+                {{selectedPost.body}}
+                <hr />
+                <spinner [visible]="commentsLoading"></spinner>                
+                <div *ngFor="let comment of comments" class="media">
+                    <div class="media-left">    
+                        <img class="media-object thumbnail" src="http://lorempixel.com/100/100/people?random={{comment.id}}">                     
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">{{comment.name}}</h4>
+                        {{comment.body}}
+                    </div>
+                </div>                
+            </div>
+        </div>
+    </div>
+</div>
